# grid_lab_6

./: CMakeLists.txt  main_get_num_threads.cpp  main_get_thread_num.cpp  openmp_vec_prod_parallel.c  openmp_vec_prod_parallel_critical.c  openmp_vec_prod_parallel_for_reduce.c  openmp_vec_prod_parallel_reduce.c
